--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,6 @@ framework = arduino
 lib_deps = 
 	zinggjm/GxEPD2@^1.3.9
 	ricmoo/QRCode@^0.0.1
+	me-no-dev/AsyncTCP@^1.1.1
+	me-no-dev/ESP Async WebServer@^1.2.3
 monitor_speed = 115200
